# social-force-sim

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  sim_dao.py
backend/app/models/: __init__.py  sim.py  utils.py
backend/app/test/: test_utils.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Canvas.tsx  Controls.tsx  Sim.tsx
frontend/src/hooks/: useSimulation.ts
